@@ -202,6 +202,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #17049: Localized calendar methods now return unicode if a locale
+  includes an encoding and the result string contains month or weekday (was
+  regression from Python 2.6).
+
 - Issue #4844: ZipFile now raises BadZipfile when opens a ZIP file with an
   incomplete "End of Central Directory" record.  Original patch by Guilherme
   Polo and Alan McIntyre.
